--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -13,3 +13,8 @@
 .ng-valid.ng-dirty {
 	border-color: #78FA89;
 }
+
+body {
+	background-color: #EEEEEE;
+	background-image: url('../img/background/dark-stripes-light.png');
+}
