--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,10 +1,25 @@
 <section data-ng-controller="HomeController">
 	<div class="row">
-		<div class="col-sm-6">
-			Hello
+		
+		<div class="col-sm-6" ng-repeat="alert in alerts">
+			<div class="row">
+				<div class="col-xs-4">
+					<h1 class="pull-right">
+						<button type="button" class="btn" ng-class="alert.color">
+							<i class="fa fa-lg" ng-class="alert.icon"></i>
+						</button>
+					</h1>
+				</div>
+				<div class="col-xs-8">
+					<h1>{{alert.total}}</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-8 col-xs-offset-4">
+					<span class="text-muted">{{alert.description}}</span>
+				</div>
+			</div>
 		</div>
-		<div class="col-sm-6">
-			World
-		</div>	
+
 	</div>
 </section>
