--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -6,7 +6,7 @@
 				<div class="col-xs-4">
 					<h1 class="pull-right">
 						<button type="button" class="btn" ng-class="alert.color">
-							<i class="fa fa-lg" ng-class="alert.icon"></i>
+							<i class="fa fa-2x" ng-class="alert.icon"></i>
 						</button>
 					</h1>
 				</div>
