--- a/public/modules/users/css/users.css
+++ b/public/modules/users/css/users.css
@@ -1,8 +1,3 @@
-@media (min-width: 992px) {
-	.nav-users {
-		position: fixed;
-	}
-}
 .remove-account-container {
 	display: inline-block;
 	position: relative;
@@ -11,4 +6,19 @@
 	top: 10px;
 	right: 10px;
 	position: absolute;
+}
+.login-form-bg {
+	background-color: #FFFFFF;
+	border: 15px solid;
+	border-radius: 15px;
+	border-color: #FFFFFF;
+	margin-top: 25px;
+}
+@media (min-width: 992px) {
+	.nav-users {
+		position: fixed;
+	}
+	.login-form-bg {
+		margin-top: 50px;
+	}
 }
