--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -17,7 +17,7 @@
 			<img src="/modules/users/img/buttons/github.png">
 		</a>
 	</div> -->
-	<div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4 login-form-bg">
+	<div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4 signin-form-bg">
 		<h3 class="text-center">Login</h3>
 			<form data-ng-submit="signin()" class="signin form-horizontal" autocomplete="off">
 				<fieldset>
