Add customer list design

--- a/public/modules/customers/css/customers.css
+++ b/public/modules/customers/css/customers.css
@@ -1,6 +1,9 @@
 .customer-profile {
 	font-size: 250px;
 }
+.customer-list {
+	font-size: 150px;
+}
 .checkbox-left {
 	width: 5%;
 	text-align: left;
