--- a/public/modules/customers/views/list-customers.client.view.html
+++ b/public/modules/customers/views/list-customers.client.view.html
@@ -1,19 +1,27 @@
-<section data-ng-controller="CustomersController" data-ng-init="find()">
-    <div class="page-header">
-        <h1>Customers</h1>
-    </div>
-    <div class="list-group">
-        <a data-ng-repeat="customer in customers" data-ng-href="#!/customers/{{customer._id}}" class="list-group-item">
-			<small class="list-group-item-text">
-				Posted on
-				<span data-ng-bind="customer.created | date:'medium'"></span>
-				by
-				<span data-ng-bind="customer.user.displayName"></span>
-			</small>
-			<h4 class="list-group-item-heading" data-ng-bind="customer.name"></h4>
-        </a>
-    </div>
-    <div class="alert alert-warning text-center" data-ng-hide="!customers.$resolved || customers.length">
-    	No Customers yet, why don't you <a href="/#!/customers/create">create one</a>?
-    </div>
+<section data-ng-controller="CustomersController as customersCtrl">
+	<div class="page-header">
+		<h1>Customers</h1>
+	</div>
+
+	<div class="list-group">
+		<div class="col-md-3 col-sm-4 col-xs-6" data-ng-repeat="customer in customersCtrl.customers">
+			<a  data-ng-href="#!/customers/{{customer._id}}" class="list-group-item">
+				<h4 class="customer-list text-center">
+					<i class="fa fa-user"></i>
+				</h4>
+				<div class="row">
+					<div class="col-xs-10 col-xs-offset-1">
+						<h4>{{customer.firstName}} {{customer.lastName}}</h4>
+						<small class="list-group-item-text text-muted">
+							<span data-ng-bind="customer.created | date:'medium'"></span>
+						</small>
+					</div>
+				</div>
+			</a>
+		</div>
+	</div>
+
+	<div class="alert alert-warning text-center" data-ng-hide="!customers.$resolved || customers.length">
+		No Customers yet, why don't you <a href="/#!/customers/create">create one</a>?
+	</div>
 </section>
