--- a/public/modules/customers/views/list-customers.client.view.html
+++ b/public/modules/customers/views/list-customers.client.view.html
@@ -2,24 +2,43 @@
 	<div class="page-header">
 		<h1>Customers</h1>
 	</div>
-
-	<div class="list-group">
-		<div class="col-md-3 col-sm-4 col-xs-6" data-ng-repeat="customer in customersCtrl.customers">
-			<a  data-ng-href="#!/customers/{{customer._id}}" class="list-group-item">
-				<h4 class="customer-list text-center">
-					<i class="fa fa-user"></i>
-				</h4>
-				<div class="row">
-					<div class="col-xs-10 col-xs-offset-1">
-						<h4>{{customer.firstName}} {{customer.lastName}}</h4>
-						<small class="list-group-item-text text-muted">
-							<span data-ng-bind="customer.created | date:'medium'"></span>
-						</small>
-					</div>
-				</div>
-			</a>
+	<div class="row">
+		<div class="col-xs-12 col-sm-8 col-md-9">
+			<div class="input-group input-group-lg">
+	      		<input type="text" class="form-control" placeholder="Search..." ng-model="searchText">
+	      		<span class="input-group-btn">
+	        		<button class="btn btn-default" type="button">Go!</button>
+	      		</span>
+			</div>
+		</div>
+		<div class="col-xs-12 col-sm-4 col-md-3 text-center">
+			<button type="button" class="btn btn-success">
+				<i class="fa fa-user"></i></br>
+				New Customer
+			</button>
 		</div>
 	</div>
+	</br>
+	</br>
+	<!-- <div class="row"> -->
+		<div class="list-group">
+			<div class="col-xs-6 col-sm-4 col-md-3" data-ng-repeat="customer in customersCtrl.customers | filter: searchText">
+				<a  ng-click="customersCtrl.modalUpdate('lg', customer)" class="list-group-item">
+					<h4 class="customer-list text-center">
+						<i class="fa fa-user"></i>
+					</h4>
+					<div class="row">
+						<div class="col-xs-10 col-xs-offset-1">
+							<h4>{{customer.firstName}} {{customer.lastName}}</h4>
+							<small class="list-group-item-text text-muted">
+								<span data-ng-bind="customer.created | date:'medium'"></span>
+							</small>
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+	<!-- </div> -->
 
 	<div class="alert alert-warning text-center" data-ng-hide="!customers.$resolved || customers.length">
 		No Customers yet, why don't you <a href="/#!/customers/create">create one</a>?
