--- a/public/modules/customers/views/create-customer.client.view.html
+++ b/public/modules/customers/views/create-customer.client.view.html
@@ -1,9 +1,9 @@
-<section data-ng-controller="CustomersController">
-	<div class="page-header">
-		<h1>New Customer</h1>
+<section data-ng-controller="CustomersCreateController as customersCrCtrl">
+	<div class="modal-header">
+		<h3 class="modal-title">New Customer</h3>
 	</div>
-	<div class="col-md-12">
-		<form class="" data-ng-submit="create()" novalidate>
+	<div class="modal-body">
+		<form name="createCustomerForm">
 			<fieldset>
 				<div class="row">
 					<div class="form-group">
@@ -14,46 +14,47 @@
 						</div>
 					</div>
 					<div class="col-sm-6 text-center">
-						<i class="fa fa-user customer-profile" ng-class="{'text-primary': referred, 'text-danger': !referred}"></i>
+						<i class="fa fa-user customer-profile" ng-class="{'text-primary': customersCrCtrl.referred, 'text-pink': !customersCrCtrl.referred}"></i>
 					</div>
 					<div class="col-sm-6">
 						<div class="form-group">
 							<label class="control-label" for="firstname">First Name</label>
 							<div class="controls">
-								<input type="text" data-ng-model="firstName" id="firstname" class="form-control">
+								<input type="text" data-ng-model="customersCrCtrl.firstName" id="firstname" class="form-control" required>
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label" for="lastname">Last Name</label>
 							<div class="controls">
-								<input type="text" data-ng-model="lastName" id="lastname" class="form-control">
+								<input type="text" data-ng-model="customersCrCtrl.lastName" id="lastname" class="form-control" required>
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label" for="email">Email</label>
 							<div class="controls">
-								<input type="text" data-ng-model="email" id="email" class="form-control">
+								<input type="text" data-ng-model="customersCrCtrl.email" id="email" class="form-control">
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label" for="phone">Phone</label>
 							<div class="controls">
-								<input type="text" data-ng-model="phone" id="phone" class="form-control">
+								<input type="text" data-ng-model="customersCrCtrl.phone" id="phone" class="form-control">
 							</div>
 						</div>
 					</div>
+				</div>
 				<div class="row">
 					<div class="col-sm-6 col-sm-push-6">
 						<div class="form-group">
 							<label class="control-label" for="company">Company</label>
 							<div class="controls">
-								<input type="text" data-ng-model="company" id="company" class="form-control">
+								<input type="text" data-ng-model="customersCrCtrl.company" id="company" class="form-control">
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label" for="website">Website</label>
 							<div class="controls">
-								<input type="text" data-ng-model="website" id="website" class="form-control">
+								<input type="text" data-ng-model="customersCrCtrl.website" id="website" class="form-control">
 							</div>
 						</div>
 					</div>
@@ -61,13 +62,13 @@
 						<div class="form-group">
 							<label class="control-label" for="referred">Referred</label>
 							<div class="controls">
-								<input type="checkbox" data-ng-model="referred" id="referred" class="form-control checkbox-left">
+								<input type="checkbox" data-ng-model="customersCrCtrl.referred" id="referred" class="form-control checkbox-left">
 							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label" for="channel">Channel</label>
 							<div class="controls">
-								<input type="text" data-ng-model="channel" id="channel" class="form-control">
+								<input type="text" data-ng-model="customersCrCtrl.channel" id="channel" class="form-control">
 							</div>
 						</div>
 					</div>
@@ -77,17 +78,16 @@
 						<div class="form-group">
 							<label class="control-label" for="industry">Industry</label>
 							<div class="controls">
-								<input type="text" data-ng-model="industry" id="industry" class="form-control">
+								<input type="text" data-ng-model="customersCrCtrl.industry" id="industry" class="form-control">
 							</div>
-						</div>
-					</div>
-					<div class="col-sm-6">
-						<div class="form-group">
-							<button type="submit" class="btn btn-success btn-lg">Save & Close</button>
 						</div>
 					</div>
 				</div>
 			</fieldset>
 		</form>
+	</div>
+	<div class="modal-footer">
+		<button class="btn btn-success btn-lg" ng-click="customersCrCtrl.create();ok()" ng-disabled="createCustomerForm.$invalid">Save & Close</button>
+		<button class="btn btn-warning btn-lg" ng-click="cancel()">Cancel</button>
 	</div>
 </section>
