--- a/public/modules/customers/views/list-customers.client.view.html
+++ b/public/modules/customers/views/list-customers.client.view.html
@@ -12,35 +12,13 @@
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-4 col-md-3 text-center">
-			<button type="button" class="btn btn-success">
-				<i class="fa fa-user"></i></br>
+			<button type="button" class="btn btn-success" ng-click="customersCtrl.modalCreate('lg')">
+				<i class="fa fa-user fa-2x"></i></br>
 				New Customer
 			</button>
 		</div>
 	</div>
 	</br>
 	</br>
-	<!-- <div class="row"> -->
-		<div class="list-group">
-			<div class="col-xs-6 col-sm-4 col-md-3" data-ng-repeat="customer in customersCtrl.customers | filter: searchText">
-				<a  ng-click="customersCtrl.modalUpdate('lg', customer)" class="list-group-item">
-					<h4 class="customer-list text-center">
-						<i class="fa fa-user"></i>
-					</h4>
-					<div class="row">
-						<div class="col-xs-10 col-xs-offset-1">
-							<h4>{{customer.firstName}} {{customer.lastName}}</h4>
-							<small class="list-group-item-text text-muted">
-								<span data-ng-bind="customer.created | date:'medium'"></span>
-							</small>
-						</div>
-					</div>
-				</a>
-			</div>
-		</div>
-	<!-- </div> -->
-
-	<div class="alert alert-warning text-center" data-ng-hide="!customers.$resolved || customers.length">
-		No Customers yet, why don't you <a href="/#!/customers/create">create one</a>?
-	</div>
+	<customer-list></customer-list>
 </section>
