Moved db connection details to local .env file

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -16,5 +16,5 @@
 
 body {
 	background-color: #EEEEEE;
-	background-image: url('../img/background/dark-stripes-light.png');
+	background-image: url('modules/core/img/background/dark-stripes-light.png');
 }
